# new_python_project

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TEMPLATE_README.md  _project_setup.py  _reconnect_git.sh  anppt.html  config.toml  config.yml  cookiecutter.json  index.html  new_project_name.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-release.txt  requirements-test.txt  requirements-types.txt  requirements.txt  requirements_dev.txt  search.js  setup.cfg  tox.ini
.github/: template.yml
.github/workflows/: CI.yml  docs-to-pages.yml  rename_templates.yml
docs/: anppt.html  index.html  new_project_name.html  search.js  src.html  tests.html
docs/html/new_project_name/: base.html  cli.html  index.html
docs/html/new_project_name/_helpers/: color_logger.html  config_loader.html  index.html
docs/html/new_project_name/_validation/: index.html
docs/markdown/new_project_name/: base.md  cli.md  index.md
docs/markdown/new_project_name/_helpers/: color_logger.md  config_loader.md  decorators.md  index.md
docs/markdown/new_project_name/_validation/: examples.md  index.md  validating_base.md
docs/new_project_name/: _helpers.html  _validation.html  base.html  cli.html  helpers.html  index.html  validation.html
docs/new_project_name/_helpers/: color_logger.html  config_loader.html  decorators.html  index.html  nice_logger.html
docs/new_project_name/_validation/: examples.html  index.html  validating_base.html
docs/new_project_name/validation/: examples.html
docs/src/: new_project_name.html
docs/src/new_project_name/: helpers.html  validation.html
docs/src/new_project_name/validation/: examples.html
hooks/: post_gen_project.py  pre_gen_project.py
new_project_name/: __init__.py  __main__.py  _helpers.html  _validation.html  base.html  base.py  cli.py  helpers.html  validation.html
new_project_name/_helpers/: __init__.py  color_logger.py  config_loader.py  decorators.py  nice_logger.py
new_project_name/_validation/: __init__.py  examples.html  examples.py  validating_base.py
new_project_name/helpers/: decorators.py
new_project_name/validation/: examples.html
scripts/: export_requirements.sh  release.sh
src/anppt/: __init__.py  cli.py
src/new_project_name/: __init__.py  __main__.py  base.py  cli.py
src/new_project_name/_helpers/: __init__.py  config_loader.py  decorators.py  nice_logger.py
src/new_project_name/_validation/: __init__.py  examples.py  validating_base.py
src/new_project_name/helpers/: __init__.py  nice_logger.py
src/new_project_name/validation/: examples.py  validating_base.py
tests/: __init__.py
tests/_helpers/: test_config_loader.py
tests/_helpers/.files/: config_bad.yml  config_ok.yml  config_ok_2.yml
tests/helpers/: test_config_loader.py
{{ cookiecutter.__project_slug_dashed }}/: .coveragerc  .gitchangelog.rc  .gitignore  .mypy.ini  .ruff.toml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
{{ cookiecutter.__project_slug_dashed }}/.github/workflows/: CI.yml
{{ cookiecutter.__project_slug_dashed }}/scripts/: export_requirements.sh  lint-and-format.sh  release.sh
{{ cookiecutter.__project_slug_dashed }}/src/{{ cookiecutter.__project_slug }}/: __init__.py  base.py  cli.py
{{ cookiecutter.__project_slug_dashed }}/src/{{ cookiecutter.project_slug }}/: __init__.py  base.py  cli.py
{{ cookiecutter.project_slug }}/: .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
{{ cookiecutter.project_slug }}/scripts/: export_requirements.sh  non_gh_cleanup.sh
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  base.py
{{ cookiecutter.project_slug }}/tests/: test_example.py
