[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "alexs-new-python-project-template"
version = "4.0.3"
description = "A template for new Python projects."
authors = ["Alex Fayers <alex@fayers.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "anppt", from = "src" }]
include = [
    "LICENSE",
    "src/anppt/py.typed",
    "src/anppt/VERSION",
    '{{cookiecutter.__project_slug}}/**/*',
    'cookiecutter.json',
    'hooks/*',
]

[tool.poetry.scripts]
anppt = "anppt:cli_main"

[tool.poetry.dependencies]
# Main project dependencies.
python = ">=3.9,<4.0"
cookiecutter = "^2.6.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
# Linters for use during development (e.g. via vscode).
ruff = "^0.5.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.poetry.group.types.dependencies]
# Typestub packages for use during development.

[tool.poetry.group.test.dependencies]
# For running tests.
pytest = "^8.2.2"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"

[tool.poetry.group.docs]
# For generating documentation.
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.release]
# For making a new versioned release of the project.
optional = true

[tool.poetry.group.release.dependencies]
gitchangelog = "^3.0.4"
