[metadata]
name = new_project_name
version = file: new_project_name/VERSION
author = new_project_author
description = new_project_description
url = https://github.com/new_project_author/new_project_name
long_description = file: README.md
long_description_content_type = "text/markdown"
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    new_project_name

install_requires =
    pyyaml

python_requires = >=3.9
zip_safe = no

[options.extras_require]
test = 
    mypy
    types-PyYAML
    flake8
    isort
    black
    pydocstyle
    flake8-docstrings
    pdoc3
    pytest

[options.package_data]
new_project_name = py.typed

[options.entry_points]
console_scripts =
    new_project_name = new_project_name:cli_main

[black]
line-length = 120

[flake8]
max-line-length = 120
exclude = .*, tests/, docs/, __pycache__, setup.py
docstring-convention = google

[pydocstyle]
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false

[mypy]
ignore_missing_imports = true
