{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ cookiecutter.open_source_license }}"
{%- endif %}
readme = "README.md"
packages = [{include = "{{ cookiecutter.__project_slug}}", from = "src"}]
include = ["LICENSE", "src/{{ cookiecutter.__project_slug}}/py.typed", "src/{{ cookiecutter.__project_slug}}/VERSION"]

[tool.poetry.scripts]
"{{ cookiecutter.__project_slug_dashed }}" = "{{ cookiecutter.__project_slug}}:cli_main"

[tool.poetry.dependencies]
# Main project dependencies.
python = ">=3.9,<4.0"
toml = "^0.10.2"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
# Linters for use during development (e.g. via vscode).
ruff = "^0.5.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.poetry.group.types.dependencies]
# Type stubs used by the package.
types-toml = "^0.10.8.6"

[tool.poetry.group.test.dependencies]
# For running tests.
pytest = "^8.2.2"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"

[tool.poetry.group.docs]
# For generating documentation.
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.release]
# For making a new versioned release of the project.
optional = true

[tool.poetry.group.release.dependencies]
gitchangelog = "^3.0.4"

### Tool configs ###

[tool.cruft]
skip = ["tests"]
